# NA64-Gaudi-lib

./: CMakeLists.txt  README.md
include/: AbstractSourceSvc.h  DAQEvent.h  DAQRawReader.h  FileSourceSvc.h
python/NA64GaudiLib/: NA64GaudiAppManager.py  __init__.py
src/: DAQEvent.cpp  DAQRawReader.cpp  FileSourceSvc.cpp
